--- a/src/app/pages/tabs/account/account.page.scss
+++ b/src/app/pages/tabs/account/account.page.scss
@@ -1,88 +1,151 @@
-ion-content {
-    width: 100%;
-    background-color: #F9FAFB;
-    background-image: url(../../../../assets/img/bg/Vectoraccount.svg);
-    background-size: cover;
-}
-ion-card {
-    margin-left: 5%;
-    margin-right: 5%;
-    position: relative;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0.5rem;
-    border-radius: 0;
-}
-ion-card-title {
-    font-size: 1rem;
-    width: 50%;
-    padding: 0.2rem;
-}
-ion-card-header {
-    padding-top: 0;
-    padding-bottom: 0;
-    display: flex;
-    flex-direction: row;
-}
-ion-card-content {
-    padding: 0.2rem;
-    width: 50%;
-    text-align: right;
+ion-content{
+  overflow-y: scroll;
 }
 
-
-
-.header {
+.title {
     display: flex;
     justify-content: center;
-    margin-top: 65px;
-    font-size: 25px;
-    font-weight: bold;
-    background-color: #F9FAFB;
-}
-
-
-.ln {
+    margin-top: 4rem;
+    margin-bottom: 2rem;
+  }
+  .ln {
     margin: auto;
-    margin-top: 50px;
-    margin-bottom: 10%;
-
-}
-
-
-img {
-    margin: auto;
+    margin-bottom: 1.5rem;
     text-align: center;
+    background: none;
+  }
+  .avatar {
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 0.7rem;
+    display: flex;
+  
     width: 5rem;
     border-radius: 100%;
-    border: 0.2rem solid white;
-    display: block;
-}
-.name {
-    text-align: center;
-    margin-top: 1rem;
-    display: block;
-    font-size: 20px;
+    // border: 0.1rem solid rgb(2, 2, 2);
+    // box-shadow: 0 0 1rem rgb(255, 255, 255);
+  }
+  .name {
+    font-size: 1.3rem;
     font-weight: bold;
     color: #891E89;
     text-decoration: none;
-}
-
-.section {
+  
+  }
+  
+  .section {
+    margin-top: 4rem;
     margin-bottom: 50%;
     position: relative;
-    background-color: #F9FAFB;
-}
-
-ion-button {
+    margin: auto;
+    background: none;
+    border-radius: 1.5rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+    width: 90%;
+    overflow:visible;
+  
+  }
+  
+  ion-content {
+      min-width: 100%;
+      min-height: auto;
+      max-height: fit-content;
+      background-image: url(../../../../assets/img/bg/Vectoraccount.svg);
+      background-size: cover;
+  }
+  
+  ion-button {
+    margin: auto;
     font-size: 1rem;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
-  
-    
-    width: 7.25rem;
+    width: 25%;
     height: 2.75rem;
-    border-radius: 3rem;
-}
+    margin-top: 4rem;
+  
+  }
+  ion-card {
+      max-width: 100%;
+      margin: auto;
+      position: relative;
+    border-radius: 0;
+  
+      box-shadow: none;
+  }
 
+  ion-card-title {
+      font-size: 1rem;
+      float: left;
+      max-width: 50%;
+  }
+  .ion-text-right {
+    display: inline-block;
+  }
+  #name {
+    border-radius: 1rem 1rem 0 0;
+  }
+  #number {
+    border-radius: 0 0 1rem 1rem;
+  
+  }
+  
+  .card-content-ios {
+      padding: 0;
+      font-size: 0.7rem;
+      line-height: 1;
+  }
+  
+  @media only screen and (min-width: 568px) {
+    .title {
+      margin-top: 6rem;
+    }
+  
+    .ln {
+      margin-bottom: 2rem;
+    }
+  
+    .avatar {
+      width: 6rem;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+    }
+  
+    .name {
+      font-size: 1.5rem;
+    }
+  
+    .section {
+      margin-bottom: 10%;
+      border-radius: 1.5rem;
+      box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+      width: 70%;
+      overflow:visible;
+    }
+  
+    ion-card {
+      max-width: 100%;
+    }
+  
+    ion-card-title {
+      font-size: 1.2rem;
+    }
+  
+    .card-content-ios {
+      font-size: 1rem;
+    }
+
+
+    ion-button {
+      margin: auto;
+      font-size: 1rem;
+      font-style: normal;
+      font-weight: 600;
+      width: 20%;
+      height: 2.75rem;
+      margin-top: 4rem;
+    
+    }
+  }
+  
+  
+  
