--- a/src/app/pages/tabs/home/topay/topay.page.scss
+++ b/src/app/pages/tabs/home/topay/topay.page.scss
@@ -5,41 +5,43 @@
     font-size: 25px;
     font-weight: bold;
     color: #891E89;
-}
-
-h5 {
+  }
+  
+  h5 {
     font-weight: bold;
     color: #891e89;
     padding-left: 25px;
-}
-
-ion-content {
+  }
+  
+  ion-content {
     --background: #F5F5F5;
-}
-
-ion-select{
-    width: calc(100% - 40px);
+  }
+  
+  form {
+    width: 100%;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 70%;
+  }
+  
+  ion-select,
+  .rounded-input {
+    width: 100%;
     height: 60px;
-    margin: 0 20px;
-    border-radius: 8px;
-    padding: 8px;
-    box-sizing: border-box;
-    border: 1px solid #891e89;
-    background-color: white;
-}
-.submit{
-    margin-top: 40px;
-    text-align: center;
-}
-
-.rounded-input {
-    width: calc(100% - 40px);
-    height: 60px;
-    margin: 0 20px;
-    border-radius: 8px;
-    padding: 8px;
+    margin: 10px auto;
+    border-radius: 5px;
+    padding: 15px; 
     box-sizing: border-box;
     border: 1px solid #891e89;
     background-color: white;
     color: gray;
-}
+  }
+  
+  .submit {
+    margin-top: 40px;
+    text-align: center;
+  }
+  
+  
+  
