--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,7 +1,8 @@
 // background image
-// ion-content {
-//   --background: url('../../../assets/img/bg/Vectorlogin.svg') no-repeat 100% 100%;
-// }
+ion-content {
+  background: url('../../../assets/img/bg/Vectorlogin.svg');
+  background-size: cover;
+}
 
 ion-icon {
     position: relative;
@@ -17,11 +18,9 @@ ion-card-title {
 //   font-family: 'Poppins';
 // }
 .card-center{
-  position: absolute;
-  top: 0; left: 0; bottom: 20%; right: 0;
   margin: auto;
 
-  
+  display: block;
   max-width: 90%;
   height: fit-content;
   border-radius: 1rem;
@@ -40,7 +39,7 @@ ion-card-title {
 
   // the ff. does not work 
   background: linear-gradient(100deg, #D2AAC2 -5.85%, #BE87BE 109.55%);
-  // box-shadow: 0px 8px 21px 0px rgba(0, 0, 0, 0.16);
+
 }
 
 #logo {
@@ -61,10 +60,18 @@ a {
 }
 
 @media (min-width: 768px) {
- 
+  ion-content {
+    background-repeat: no-repeat;
+    width: 100%;
+  }
 
   .card-center {
-    max-width: 40%;
+    margin: auto;
+    
+    min-width: 30%;
+    max-width: 70%;
+    height: fit-content;
+    display: flex;
     position: absolute;
     
  
@@ -76,7 +83,6 @@ a {
     // containers
     #container {
       text-align: center;
-    
       position: absolute;
       left: 0;
       right: 0;
