--- a/src/app/pages/tabs/home/maintenance/maintenance.page.scss
+++ b/src/app/pages/tabs/home/maintenance/maintenance.page.scss
@@ -15,15 +15,17 @@ h5 {
 }
 
 ion-content {
-  --background: #F5F5F5;
+  background: #F5F5F5; 
+  position: absolute; 
 }
 
-form {
+section {
   width: 100%;
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
   max-width: 70%;
+  overflow-y:scroll
 }
 
 ion-select,
