--- a/src/app/pages/tabs/request/request.page.scss
+++ b/src/app/pages/tabs/request/request.page.scss
@@ -1,48 +1,52 @@
 .header {
+  display: flex;
+  justify-content: center;
+  margin-top: 65px;
+  font-size: 25px;
+  font-weight: bold;
+  color: #891E89;
+}
+.cards {
+  margin-top: 30px;
+  margin-bottom: 6%;
+  position: relative;
+}
+
+ion-card {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 15px;
+  height: 150px;
+
+}
+
+.request__btns {
+  float: right;
+}
+
+.request__done {
+  opacity: 0.5;
+}
+
+ion-content {
+  scroll-behavior: smooth;
+}
+
+
+@media (min-width: 968px) {
+  .header {
     display: flex;
     justify-content: center;
     margin-top: 65px;
-    font-size: 25px;
+    font-size: 40px;
     font-weight: bold;
     color: #891E89;
-  
   }
-  .cards {
-    margin-top: 50px;
-    margin-bottom: 10%;
-    position: relative;
-  }
-  
   ion-card {
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 40px;
     height: 150px;
   }
+}
 
-  .request__btns {
-    float: right;
-  }
-
-  .request__done {
-    opacity: 0.5;
-  }
-  
-  
-  @media (min-width: 968px) {
-    .header {
-      display: flex;
-      justify-content: center;
-      margin-top: 65px;
-      font-size: 40px;
-      font-weight: bold;
-      color: #891E89;
-    }
-    ion-card {
-      margin-left: 100px;
-      margin-right: 100px;
-      margin-bottom: 40px;
-      height: 150px;
-    }
-  }
-  
