Log out button &  card display property

--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -41,7 +41,7 @@
     </ion-card-header>
   </ion-card>
 
-  <ion-card  id="number">
+  <ion-card id="number">
     <ion-card-header>
       <ion-card-title>Phone number</ion-card-title>
       <ion-card-content class="ion-text-right">
@@ -50,7 +50,7 @@
   </ion-card>
 </div>
 
-  <ion-button fill="outline" shape="round" size="full">
+  <ion-button fill="outline" expand="block">
     <ion-icon name="exit-outline" color="white" slot="start"></ion-icon>
     Log Out</ion-button>
 
