--- a/src/app/pages/tabs/account/account.page.html
+++ b/src/app/pages/tabs/account/account.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<div class="full">
   <ion-text class="title" color="primary"></ion-text>
 
   <div class="ln">
@@ -55,4 +55,4 @@
     Log Out</ion-button>
 
 
-</ion-content>
+  </div>
