--- a/src/app/pages/tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/tabs/dashboard/dashboard.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true">
+<div class="full">
   <ion-text class="header">DASHBOARD</ion-text>
 
   <section class="body">
@@ -34,5 +34,4 @@
 
   </section>
 
-
-</ion-content>
+</div>
