--- a/src/app/pages/tabs/home/maintenance/maintenance.page.html
+++ b/src/app/pages/tabs/home/maintenance/maintenance.page.html
@@ -1,14 +1,15 @@
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-
     <ion-title>Maintenance Request</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+
+<ion-content>
   <section>
     <h5>Unit</h5>
 
