--- a/src/app/pages/tabs/account/account.page.scss
+++ b/src/app/pages/tabs/account/account.page.scss
@@ -1,15 +1,26 @@
+.full{
+    min-width: 50%;
+    min-height: auto;
+    max-height: fit-content;
+    background-image: url(../../../../assets/img/bg/Vectoraccount.svg);
+    background-size: cover;
+    overflow-y: scroll;
+}
+
 .title {
     display: flex;
     justify-content: center;
     margin-top: 4rem;
     margin-bottom: 2rem;
   }
+
 .ln {
   margin: auto;
   margin-bottom: 1.5rem;
   text-align: center;
   background: none;
 }
+
 .avatar {
   margin: auto;
   margin-top: 1rem;
@@ -19,14 +30,13 @@
   width: 5rem;
   border-radius: 100%;
   border: 0.1rem solid rgb(2, 2, 2);
-  // box-shadow: 0 0 1rem rgb(255, 255, 255);
 }
+
 .name {
   font-size: 1.3rem;
   font-weight: bold;
   color: #891E89;
   text-decoration: none;
-
 }
 
 .section {
@@ -39,17 +49,8 @@
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
   width: 90%;
   overflow:hidden;
-
 }
 
-ion-content {
-    min-width: 50%;
-    min-height: auto;
-    max-height: fit-content;
-    background-image: url(../../../../assets/img/bg/Vectoraccount.svg);
-    background-size: cover;
-    overflow-y: scroll;
-}
 
 ion-card-header {
   width: 100%;
@@ -57,22 +58,24 @@ ion-card-header {
 
 ion-button {
   margin: auto;
+  margin-bottom: 20px;
   font-size: 1rem;
   font-style: normal;
   font-weight: 600;
-  width: 7.25rem;
+  width: 7rem;
   height: 2.75rem;
   margin-top: 4rem;
   border-radius: 10%;
+
 :hover {
   color: contrast;
   background-color: contrast;
 }
 }
+
 ion-card {
   max-width: 100%;
   margin: auto;
-  // position: relative;
   border-radius: 0;
   box-shadow: none;
 }
@@ -82,17 +85,18 @@ ion-card-title {
   width: 50%;
   display: inline-block;
 }
+
 .ion-text-right {
   display: inline-block;
   width: 50%;
-
 }
+
 #name {
   border-radius: 1rem 1rem 0 0;
 }
+
 #number {
   border-radius: 0 0 1rem 1rem;
-
 }
 
 .card-content-ios {
@@ -143,10 +147,11 @@ ion-card-title {
 
     ion-button {
       margin: auto;
-      font-size: 1rem;
+      margin-bottom: 20px;
+      font-size: 1.2rem;
       font-style: normal;
       font-weight: 600;
-      width: 20%;
+      width: 12%;
       height: 2.75rem;
       margin-top: 4rem;
     
