--- a/src/app/pages/tabs/dashboard/dashboard.page.scss
+++ b/src/app/pages/tabs/dashboard/dashboard.page.scss
@@ -1,3 +1,7 @@
+.full{
+  overflow-y:auto ;
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -61,8 +65,5 @@ ion-label {
   padding-right: 1.5rem;
   padding-top: 1rem;
   color: #891E89;
-}
-
-.card-pending {
 }
 
