--- a/src/app/pages/tabs/request/request.page.html
+++ b/src/app/pages/tabs/request/request.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<div class="full">
   <ion-text class="header">REQUESTS</ion-text>
 
 
@@ -24,6 +24,7 @@
       </ion-card-content>
     </ion-card>
   </div>
- 
+</div>
 
- </ion-content>
+
+
