--- a/src/app/pages/tabs/transactions/transactions.page.html
+++ b/src/app/pages/tabs/transactions/transactions.page.html
@@ -1,5 +1,4 @@
-
-<ion-content>
+<div class="full">
   <ion-text class="header">TRANSACTIONS</ion-text>
 
 
@@ -26,6 +25,5 @@
     </ion-card-content>
   </ion-card>
 </div>
+</div>
 
-
-</ion-content>
