To pay (Database)

--- a/src/app/pages/tabs/dashboard/dashboard.page.html
+++ b/src/app/pages/tabs/dashboard/dashboard.page.html
@@ -1,37 +1,27 @@
 <div class="full">
   <ion-text class="header">DASHBOARD</ion-text>
 
-  <section class="body">
-    <ion-card id="amount">
-      <section class="text-income">
-        <ion-card-header>Income</ion-card-header>
-        <ion-label>text</ion-label>
-      </section>
-      <ion-card-content class="pie" style="--p:68;--b:17px;--c:#891E89;">
-      </ion-card-content>
-    </ion-card>
+<div class="body">
+  <ion-card id="amount">
+    <section class="text-income">
+      <ion-card-header>Income</ion-card-header>
+      <ion-label>text</ion-label>
+    </section>
+    <ion-card-content class="pie" style="--p:68;--b:17px;--c:#891E89;">
+    </ion-card-content>
+  </ion-card>
 
-    <ion-card>
-      <ion-card-header class="text-income">Resolved Requests</ion-card-header>
-      <ion-card-content class="pie" style="--p:60;--b:17px;--c:#891E89;">
-      </ion-card-content>
-      
-    </ion-card>
+  <ion-card>
+    <ion-card-header class="text-income">Resolved Requests</ion-card-header>
+    <ion-card-content class="pie" style="--p:60;--b:17px;--c:#891E89;">
+    </ion-card-content>
+    
+  </ion-card>
 
-    <ion-card>
-      <ion-card-header class="card-title">Units</ion-card-header>
-      <ion-card-header class="number">10</ion-card-header>
-    </ion-card>
+  <ion-card>
+    <ion-card-header class="card-title">Units</ion-card-header>
+    <ion-card-header class="number">10</ion-card-header>
+  </ion-card>
 
-    <ion-card>
-      <ion-card-header class="card-title">Tenants</ion-card-header>
-      <ion-card-header class="number">40</ion-card-header>
-    </ion-card>
-
-
-      
-
-
-  </section>
-
+</div>
 </div>
