--- a/src/app/pages/tabs/home/topay/topay.page.html
+++ b/src/app/pages/tabs/home/topay/topay.page.html
@@ -1,17 +1,18 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
       <ion-buttons slot="start">
         <ion-back-button default-href="#"></ion-back-button>
       </ion-buttons>
-        <ion-title>Payment</ion-title>
+        <ion-title>PAYMENT</ion-title>
   </ion-toolbar>
   </ion-header>
   
+
   <ion-content>
-  <form>
-  <h5>Unit</h5>
+  <section>
+    <h5>Unit</h5>
   
-      <ion-select label="Select unit" name="unit" id="unit" placeholder="Unit" [(ngModel)]="unitNumber" (ionChange)="updateUnitNumber()">
+      <ion-select label="Select unit"  placeholder="Unit" [(ngModel)]="unitNumber">
         <ion-select-option value="unit1">unit 1</ion-select-option>
         <ion-select-option value="unit2">unit 2</ion-select-option>
         <ion-select-option value="unit3">unit 3</ion-select-option>
@@ -22,7 +23,7 @@
   
   <h5>To pay</h5>
   
-        <ion-select label="Select bill" name="bill" id="bill" placeholder="Bill" [(ngModel)]="billType" (ionChange)="updateBillType()">
+      <ion-select label="Select bill" placeholder="Bill" [(ngModel)]="billType">
         <ion-select-option value="rent">Rent Bill</ion-select-option>
         <ion-select-option value="water">Water Bill</ion-select-option>
         <ion-select-option value="electric">Electric Bill</ion-select-option>
@@ -30,18 +31,16 @@
   
   
   <h5>Payment Amount</h5>
-  <input type="number" name="number"   id="amount" class="rounded-input" [(ngModel)]="paymentAmount">
+  <input type="number" class="rounded-input" [(ngModel)]="paymentAmount">
   <br/>
   
   <h5>Payment Date</h5>
-  <input type="date" name="date" id="date" class="rounded-input" [(ngModel)]="paymentDate">
+  <input type="date"  class="rounded-input" [(ngModel)]="paymentDate">
   <br/>
   
   <div class="submit">
-      <ion-button (click)="submit()" [disabled]="!unitNumber || !billType || !paymentAmount || !paymentDate">Submit</ion-button>
+      <ion-button (click)="submit()" [disabled]="!(unitNumber && billType && paymentAmount && paymentDate)">Submit</ion-button>
   </div>
-  
-  </form>
-  
-  
+
+  </section>
   </ion-content>
