--- a/src/app/pages/tabs/home/topay/topay.page.scss
+++ b/src/app/pages/tabs/home/topay/topay.page.scss
@@ -6,6 +6,11 @@
     font-weight: bold;
     color: #891E89;
   }
+
+  ion-title{
+    color: hsl(300, 64%, 33%);
+    font-size: 18px;
+  }
   
   h5 {
     font-weight: bold;
@@ -17,7 +22,7 @@
     --background: #F5F5F5;
   }
   
-  form {
+  section {
     width: 100%;
     margin-bottom: 10px;
     margin-left: auto;
@@ -28,7 +33,6 @@
   ion-select,
   .rounded-input {
     width: 100%;
-    height: 60px;
     margin: 10px auto;
     border-radius: 5px;
     padding: 15px; 
