--- a/src/app/pages/tabs/transactions/transactions.page.html
+++ b/src/app/pages/tabs/transactions/transactions.page.html
@@ -6,7 +6,7 @@
 <div class="cards"  *ngFor="let trans of transactions">
   <ion-card>
     <ion-card-header>
-      <ion-card-title>{{ trans.billType }}</ion-card-title>
+      <ion-card-title>{{ trans.billType }} Bill</ion-card-title>
       <ion-card-subtitle> Unit Number: {{ trans.unitNumber }} </ion-card-subtitle>
       
     </ion-card-header>
@@ -18,7 +18,7 @@
       </ion-label>
 
   <div class="transaction__btns">
-        <ion-button fill="clear" (click)="deleteTransaction(trans)">Delete</ion-button>
+        <ion-button fill="clear" (click)="deleteTransaction(trans)">Delete</ion-button> <br>
       </div>
  
 
