Login and Sign up revisions

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -29,7 +29,7 @@
 
 				<!-- <ion-item lines="none"> -->
 					<ion-button fill="solid" expand="block" id="button" class="gradient-bg" type="submit" >
-						Login
+						<a href="tabs/home" id="a-button">Login</a>
 					</ion-button>
 				<!-- </ion-item> -->
 				
