--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -2,29 +2,29 @@
 ion-content {
   background: url('../../../assets/img/bg/Vectorlogin.svg');
   background-size: cover;
+  height: 100%;
+  width: 100%;
 }
 
 ion-icon {
-    position: relative;
-  }
+  position: relative;
+}
+
 ion-input {
   margin-left: 0.5rem;
   width: 80%;
 }
+
 ion-card-title {
   font-size: 1.4rem;
 }
-// ion-label {
-//   font-family: 'Poppins';
-// }
+
 .card-center{
   margin: auto;
-
-  display: block;
   max-width: 90%;
-  height: fit-content;
   border-radius: 1rem;
 }
+
 #button {
   font-size: 1rem;
   font-style: normal;
@@ -35,9 +35,14 @@ ion-card-title {
   height: 2.75rem;
   margin: auto;
   border-radius: 3rem;
-  // the ff. does not work 
-  background: linear-gradient(100deg, #D2AAC2 -5.85%, #BE87BE 109.55%);
+}
 
+#a-button {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  color: aliceblue;
 }
 
 #logo {
@@ -57,7 +62,7 @@ a {
     margin-left: 0.2rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 968px) {
   ion-content {
     background-repeat: no-repeat;
     width: 100%;
@@ -65,15 +70,12 @@ a {
 
   .card-center {
     margin: auto;
-    
-    min-width: 30%;
-    max-width: 70%;
-    height: fit-content;
-    display: flex;
-    position: absolute;
-    
- 
+    margin-top: 7%;
+    max-width: 25%;
 
+    vertical-align: middle;
+    justify-content: center;
+    
   }
 }
 
