--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -1,38 +1,78 @@
-.center {
-    margin: auto;
-  }
-  ion-input {
-    min-width: fit-content;
-    margin: auto;
-    margin-top: 1.3rem;
-    --background: primary;
-  }
-  ion-card {
-    margin: auto;
-    width: fit-content;
-  }
-  ion-card-title {
-    font-size: 1.6rem;
+ion-content {
+  height: 100%;
+  background: url('../../../assets/img/bg/Vectorlogin.svg');
+  background-size: cover;
+  overflow-y: scroll;
+  
+}
+
+.card-center{
+  margin: auto;
+  max-width: 90%;
+  border-radius: 1rem;
+}
+ion-input {
+  text-align: left;
+  margin-top: 0.7rem;
+  margin-right: 0.5rem;
+}
+ion-card {
+  margin: auto;
+  margin-top: 15%;
+  width: 93%;
+  border-radius: 1rem;
+
+}
+ion-card-title {
+  font-size: 1.4rem;
+}
+ion-card-content {
+  padding-bottom: 0.3rem;
+  padding-right: 0.5rem;
+}
+
+#logo {
+  width: 40%;
+  margin: auto;
+  margin-bottom: -2.5rem;
+}
+.gradient-bg {
+  margin: auto;
+  color: #f5f5f5;
+}
+
+#button {
+  margin: auto;
+  margin-top: 1.4rem;
+  height: 3rem;
+  width: 7.25rem;
+  height: 2.75rem;
+  border-radius: 3rem;
+
+}
+
+a {
+  text-decoration: none;
+}
+.align-label {
+  text-align: center;
+  color: gray;
+  padding: 0.7rem;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 968px) {
+  ion-content {
+    background-repeat: no-repeat;
+    width: 100%;
   }
 
-  #logo {
-    width: 50%;
+  .card-center {
     margin: auto;
-    margin-bottom: -2.5rem;
-  }
-  .gradient-bg {
-    margin: auto;
-    color: #f5f5f5;
-  }
+    margin-top: 3%;
+    margin-bottom: 3%;
+    max-width: 35%;
   
-  #button {
-    margin: auto;
-    margin-top: 1rem;
-    min-width: fit-content;
-    max-width: 30%;
-    height: 3rem;
+    
   }
-  
-  a {
-    text-decoration: none;
-  }
+}
